--- a/home/workstation_cli/modules/ollama/docker-compose.yml
+++ b/home/workstation_cli/modules/ollama/docker-compose.yml
@@ -11,7 +11,8 @@ services:
   ollama-web-ui:
     image: ghcr.io/open-webui/open-webui:main
     environment:
-      - WEBUI_AUTH=False
+      - WEBUI_AUTH=false
+      - WEBUI_SECRET_KEY=
     volumes:
       - /home/lostlang/ollama/ollama-webui:/root/.ollama
     restart: unless-stopped
