feat: delete dead code, update ssh

--- a/template.secret.yaml
+++ b/template.secret.yaml
@@ -2,6 +2,7 @@ openWebui.webuiSecretKey: ""
 openWebui.oauthSessionTokenEncryptionKey: ""
 ai.provider.<name>.apiKey: ""
 cloudflare.tunnel.<name>: ""
+ssh.<name>.host: ""
 zerotier.interface.<name>.id: ""
 zerotier.interface.<name>.open.udpPorts: ""
 zerotier.interface.<name>.open.tcpPorts: ""
